Added less stupid simulation-speed handling. Can stop simulation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 
+	<!--
+
+	-->
+
 	<svg width="800" height="800">
 	
 		<filter id="Bevel" filterUnits="objectBoundingBox" x="-10%" y="-10%" width="120%" height="120%">
@@ -36,14 +40,17 @@
 			<p>
 				<input type="range" min="0" max="100" id="chance_of_vaccination" step="1" onchange="chance_of_vaccination_change(value)" defaultValue="90" value="90"></input>
 			</p>
-			<p>The vaccine is <output for="efficacy_of_vaccination" id="textual_efficacy_of_vaccination"></output> efficient.</p>
+			<p>The vaccine is <output for="efficacy_of_vaccination" id="textual_efficacy_of_vaccination"></output> efficient</p>
 			<p>
 				<input type="range" min="0" max="100" id="efficacy_of_vaccination" step="1" onchange="efficacy_of_vaccination_change(value)" defaultValue="90" value="90"></input>
 			</p>
-			<p>Ms per tick:</p>
-			<p><span id="ms_per_tick" contenteditable="true" class="userinput">250</span></p>
 			
-			<p><button type="button" onclick="javascript:kickOff();">Launch</button></p>
+			<p>Simulation-speed</p>
+			<p><input type="radio" name="simulation_speed" label="fast" value="25">Fast</input></p>
+			<p><input type="radio" name="simulation_speed" label="medium" value="250">Medium</input></p>
+			<p><input type="radio" name="simulation_speed" label="slow" value="750">Slow</input></p>
+			
+			<p><button type="button" onclick="javascript:kickOff();" id="launcher_button">Infect someone!</button></p>
 
 			<p>Survivors: <span id="population_size"></span></p>
 			<p>Vaccinated: <span id="number_of_vaccinated"></span></p>
@@ -124,6 +131,7 @@
 			document.querySelector("#textual_efficacy_of_vaccination").value = new_value;
 		}
 		
+		var should_run = false;
 		var state_expose_people = 0;
 		var state_determine_contagion = 1;
 		var state_no_more_contagion = 2;
@@ -146,12 +154,21 @@
 		var cell_size = cell_offset - cell_whitespace;
 
 		function kickOff() {
+			should_run = true;
 			undraw();
 			intialize(side_length,
 				document.querySelector('#chance_of_vaccination').value,
 				document.querySelector('#efficacy_of_vaccination').value);
 			selectSick(Math.floor(side_length / 2), Math.floor(side_length / 2));
+			document.querySelector("#launcher_button").textContent = "End this madness";
+			document.querySelector("#launcher_button").onclick = end_it_all;
 			tick();
+		}
+
+		function end_it_all() {
+			should_run = false;
+			document.querySelector("#launcher_button").textContent = "Infect someone!";
+			document.querySelector("#launcher_button").onclick = kickOff;
 		}
 
 		/**
@@ -160,15 +177,8 @@
 		 * efficacy_of_vaccination is the chance that a vaccination will protect a person when exposed to disease
 		*/
 		function intialize(size_of_network, chance_of_vaccination, efficacy_of_vaccination) {
-			console.log("Starting");
-			console.log("chance_of_vaccination: " + chance_of_vaccination);
-			console.log("efficacy_of_vaccination: " + efficacy_of_vaccination);
-
-			console.log(document.querySelector('#ms_per_tick'));
-			tick_length = document.querySelector('#ms_per_tick').textContent;
-
-			console.log("tick_length: " + tick_length);
-
+			tick_length = document.querySelector('input[name="simulation_speed"]:checked').value
+			
 			current_state = state_expose_people;
 			grid = {};
 			grid.nodes = [];
@@ -205,6 +215,10 @@
 		}
 
 		function tick() {
+			if (!should_run) {
+				return;
+			}
+
 			if (current_state == state_expose_people) {
 				exposePeople();
 			} else if (current_state == state_determine_contagion) {
@@ -227,8 +241,8 @@
 				current_state = (current_state + 1) % 2;
 			} else {
 				current_state = state_no_more_contagion;
-				console.log("Disease burned out");
 				debug();
+				end_it_all();
 				return;
 			}
 
