Some tiny amount of commentary

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<title>Spreading disease through a lattice!</title>
 </head>
 <body>
-
 	<!--
-
+Hi. This is written real quick-like, and probably works really poorly on all platforms. Don't hate me for not being a web developer :)
 	-->
 
 	<svg width="800" height="800">
